--- a/FitnessTracker.Infrastructrure/FitnessTracker.Infrastructrure.csproj
+++ b/FitnessTracker.Infrastructrure/FitnessTracker.Infrastructrure.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FitnessTracker.Domain\FitnessTracker.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
