--- a/FitnessTracker.Application/FitnessTracker.Application.csproj
+++ b/FitnessTracker.Application/FitnessTracker.Application.csproj
@@ -10,7 +10,10 @@
     <Folder Include="Contracts\Responses\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Mappers\Users\" />
-    <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
   </ItemGroup>
 
   <ItemGroup>
