feat: add jwt token service

--- a/FitnessTracker.API/appsettings.Development.json
+++ b/FitnessTracker.API/appsettings.Development.json
@@ -6,6 +6,6 @@
         }
     },
     "ConnectionStrings": {
-        "ApplicationContext": "Host=localhost;Port=5432;Database=HotelsBookingDB;Username=postgres;Password=1111;"
+        "FitnessDbContext": "Host=localhost;Port=5432;Database=FitnessTrackerDB;Username=postgres;Password=1111;"
     }
 }
