--- a/FitnessTracker.Application/FitnessTracker.Application.csproj
+++ b/FitnessTracker.Application/FitnessTracker.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.13.0" />
   </ItemGroup>
 
   <ItemGroup>
