--- a/FitnessTracker.API/FitnessTracker.API.csproj
+++ b/FitnessTracker.API/FitnessTracker.API.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>003b96bb-ca18-4540-a3e9-62c309c7079a</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
